assets/css/styles.css
body {
  font-family: "lato", sans-serif;
  color: white !important;
  background-color: #5c2e7e !important;
}

.navbar {
  background-color: #5c2e7e !important;
}

.navbar-text {
    color: white !important;
}

.navbar-brand:hover,
.nav-link:hover,
.dropdown-item:hover {
  color: #da0c81 !important;
}

.nav-item.active .nav-link {
  color: white !important;
  background-color: #9f73ab !important;
}

.nav-link {
  color: white !important;
  margin-left: 10px;
}

.hero {
  background-color: #9f73ab;
  background-image: url(../images/Gradient\ Purple\ Dynamic\ BG.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  background-blend-mode: color-burn;
  color: white;
  padding: 100px 0;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  height: 100vh;
}

.hero h1 {
  font-size: 2.5em;
  font-family: "lato", sans-serif;
}

.hero p {
  font-size: 1.5em;
  text-align: justify;
}

.heroImage {
  max-width: 20%;
  padding: 30px;
}

#skills {
  background-color: #5c2e7e;
  text-align: center;
  list-style: none;
  margin: 50px 0;
  padding: 20px 0;
}

#skills ul {
  list-style: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0;
}

#work {
  margin: 50px 0;
  padding: 20px 0;
}

#projectCarousel {
  width: 50%;
  margin: auto;
}

.card {
    margin: auto;
}

.card-body {
    text-align: center;
}

#contact p {
  margin: 10px;
  margin-bottom: 20px;
}

#contact a {
  color: white;
}

.btn-social-icon {
    color: #ffffff;
    margin: 0 5px;
}

.btn-social-icon:hover {
    color: #da0c81;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
}

